# advent_of_code

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
2018/day10/: CMakeLists.txt  advent.cpp
2021/: CMakeLists.txt
2021/day10/: CMakeLists.txt  advent.cpp  c_cpp_properties.json  challenge.md  input.h  main.cpp
2021/day10_rust/day10/src/: main.rs
2022/rust/: .prettierrc.toml  create_secrets.sh  extract_secrets.sh
2022/rust/day1/: input.7z  readme.md
2022/rust/day1/src/: main.rs
2022/rust/day10/: input.7z  readme.md
2022/rust/day10/src/: main.rs
2022/rust/day11/: input.7z  readme.md
2022/rust/day11/src/: main.rs  utils.rs
2022/rust/day12/: Cargo.toml  input.7z  readme.md
2022/rust/day12/src/: main.rs
2022/rust/day13/: input.7z  readme.md
2022/rust/day13/src/: main.rs
2022/rust/day14/: Cargo.toml  input.7z  readme.md
2022/rust/day14/src/: main.rs
2022/rust/day15/: Cargo.toml  input.7z  readme.md
2022/rust/day2/: input.7z  readme.md
2022/rust/day2/src/: main.rs
2022/rust/day3/: input.7z  readme.md
2022/rust/day3/src/: main.rs
2022/rust/day4/: input.7z  readme.md
2022/rust/day4/src/: main.rs
2022/rust/day5/: input.7z  readme.md
2022/rust/day5/src/: main.rs  utils.rs
2022/rust/day6/: input.7z
2022/rust/day6/src/: main.rs
2022/rust/day7/: input.7z  readme.md
2022/rust/day7/src/: main.rs
2022/rust/day8/: input.7z  readme.md
2022/rust/day8/src/: main.rs
2022/rust/day9/: input.7z  readme.md
2022/rust/day9/src/: main.rs
rust_test/guessing_game/src/: main.rs
